fix svg gap

--- a/app/assets/scss/includes/modules/_homepage.scss
+++ b/app/assets/scss/includes/modules/_homepage.scss
@@ -19,13 +19,18 @@
   }
 }
 
-.hero-divider{
+.hero-divider {
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   width: 100%;
-  height: 72px;
+  height: 35px;
   overflow: hidden;
   line-height: 0;
   z-index: 2;
+  @include transition(height);
+
+  @include mq('phone') {
+    height: 72px;
+  }
 }
